fixed some bugs and added regex to search for movies added

--- a/css/components/movie-wrapper.css
+++ b/css/components/movie-wrapper.css
@@ -18,6 +18,7 @@
     color: var(--color-second);
     border-radius: 9999px;
     text-align: center;
+    padding: 0 8px;
     position: absolute;
     right: 5px;
     top: 6px;
